--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,10 +3,12 @@ androidGradlePlugin = '8.0.2'
 kotlin = '1.8.20'
 
 ktx = '1.9.0'
+appCompat = '1.6.1'
+constraintLayout = '2.1.4'
 material = '1.9.0'
 junit = '4.13.2'
-ext-junit = '1.1.5'
-espresso-core = '3.4.0'
+extJunit = '1.1.5'
+espressoCore = '3.4.0'
 
 [plugins]
 android-application = { id = 'com.android.application', version.ref = "androidGradlePlugin" }
@@ -15,9 +17,11 @@ kotlin-android = { id = 'org.jetbrains.kotlin.android', version.ref = 'kotlin' }
 
 [libraries]
 androidx-ktx = { group = 'androidx.core', name = 'core-ktx', version.ref = 'ktx' }
+androidx-appcompat = { module = 'androidx.appcompat:appcompat', version.ref = 'appCompat' }
+androidx-constraint-layout = { module = 'androidx.constraintlayout:constraintlayout', version.ref = 'constraintLayout' }
 material = { module = 'com.google.android.material:material', version.ref = 'material' }
 junit = { module = 'junit:junit', version.ref = 'junit' }
-ext-junit = { module = 'androidx.test.ext:junit', version.ref = 'ext-junit' }
-espresso-core = { module = 'androidx.test.espresso:espresso-core', version.ref = 'espresso-core' }
+ext-junit = { module = 'androidx.test.ext:junit', version.ref = 'extJunit' }
+espresso-core = { module = 'androidx.test.espresso:espresso-core', version.ref = 'espressoCore' }
 
 [bundles]
