--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 androidGradlePlugin = '8.0.2'
 kotlin = '1.8.20'
+ktlint = '11.3.2'
 
 ktx = '1.9.0'
 appCompat = '1.6.1'
@@ -14,6 +15,7 @@ espressoCore = '3.4.0'
 android-application = { id = 'com.android.application', version.ref = "androidGradlePlugin" }
 android-library = { id = 'com.android.library', version.ref = 'androidGradlePlugin' }
 kotlin-android = { id = 'org.jetbrains.kotlin.android', version.ref = 'kotlin' }
+ktlint = { id = 'org.jlleitschuh.gradle.ktlint', version.ref = 'ktlint' }
 
 [libraries]
 androidx-ktx = { group = 'androidx.core', name = 'core-ktx', version.ref = 'ktx' }
