--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Setup JDK 11
         uses: actions/setup-java@v3
         with:
+          distribution: 'zulu'
           java-version: '11'
 
       - name: Setup gradle
