--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,8 @@ appCompat = '1.6.1'
 constraintLayout = '2.1.4'
 material = '1.9.0'
 koin = '3.4.0'
+apollo = '3.8.1'
+
 junit = '4.13.2'
 extJunit = '1.1.5'
 espressoCore = '3.4.0'
@@ -17,6 +19,8 @@ android-application = { id = 'com.android.application', version.ref = "androidGr
 android-library = { id = 'com.android.library', version.ref = 'androidGradlePlugin' }
 kotlin-android = { id = 'org.jetbrains.kotlin.android', version.ref = 'kotlin' }
 ktlint = { id = 'org.jlleitschuh.gradle.ktlint', version.ref = 'ktlint' }
+apollo = { id = 'com.apollographql.apollo3', version.ref = 'apollo' }
+
 
 [libraries]
 kotlin = { module = 'org.jetbrains.kotlin:kotlin-stdlib', version.ref = 'kotlin' }
@@ -28,6 +32,10 @@ androidx-constraint-layout = { module = 'androidx.constraintlayout:constraintlay
 material = { module = 'com.google.android.material:material', version.ref = 'material' }
 koin = { group = 'io.insert-koin', name = "koin-android", version.ref = 'koin' }
 koin-viewmodel = { module = 'org.koin:koin-android-viewmodel', version.ref = 'koin' }
+apollo-plugin = { group = 'com.apollographql.apollo3', name = 'apollo-gradle-plugin', version.ref = 'apollo' }
+apollo-runtime = { group = 'com.apollographql.apollo3', name = 'apollo-runtime', version.ref = 'apollo' }
+apollo-coroutines = { group = 'com.apollographql.apollo3', name = 'apollo-coroutines-support', version.ref = 'apollo' }
+
 junit = { module = 'junit:junit', version.ref = 'junit' }
 ext-junit = { module = 'androidx.test.ext:junit', version.ref = 'extJunit' }
 espresso-core = { module = 'androidx.test.espresso:espresso-core', version.ref = 'espressoCore' }
